syntax = 'proto3';

package m3uetcpb;

option go_package = './m3uetcpb';

import "google/protobuf/timestamp.proto";

message Track {
    int64 id = 1;
    string location = 2;
    string format = 3;
    string type = 4;
    string title = 5;
    string album = 6;
    string artist = 7;
    string albumartist = 8;
    string composer = 9;
    string genre = 10;

    string comment = 11;
    string lyrics = 12;
    string cover = 13;
    int32 year = 14;
    int32 tracknumber = 15;
    int32 tracktotal = 16;
    int32 discnumber = 17;
    int32 disctotal = 18;
    google.protobuf.Timestamp date = 19;
    int64 duration = 20;

    int32 rating = 21;
    int32 playcount = 22;
    bool remote = 23;
    int64 lastplayed = 24;
    string tags = 25;
    int64 collection_id = 26;
    bool dangling = 27;

    google.protobuf.Timestamp created_at = 101;
    google.protobuf.Timestamp updated_at = 102;
}

